--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <meta name="twitter:image" content="https://trisure.de/og-image.png">
 <link rel="icon" href="/favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="manifest" href="/site.webmanifest">
@@ -341,11 +342,11 @@ body.is-mobile #noise {
 </div>
 <main>
   <div class="hero">
-    <h1 class="lang lang-en" lang="en"><span class="accent">Revolutionizing</span> insurance <span class="bright">fraud</span> <span class="accent">detection</span></h1>
     <h1 class="lang lang-de" lang="de"><span class="accent">Revolution&auml;re</span> <span class="bright">Betrugserkennung</span> <span class="accent">mit KI</span></h1>
-    <p class="lang lang-en" lang="en">Together with leading research institutes, TriSure is exploring a new generation of AI-powered fraud detection.</p>
+    <h1 class="lang lang-en" lang="en"><span class="accent">Revolutionizing</span> insurance <span class="bright">fraud</span> <span class="accent">detection</span></h1>
     <p class="lang lang-de" lang="de">Gemeinsam mit f&uuml;hrenden Forschungsinstituten erforscht TriSure eine neue Generation KI-gest&uuml;tzter Betrugserkennung.</p>
-    <form id="newsletter" action="https://formsubmit.co/julian@a68.io" method="POST" novalidate>
+    <p class="lang lang-en" lang="en">Together with leading research institutes, TriSure is exploring a new generation of AI-powered fraud detection.</p>
+    <form id="newsletter" action="https://formsubmit.co/julian@trisure.de" method="POST" novalidate>
       <input type="hidden" name="_subject" value="TriSure Newsletter Signup">
       <input type="hidden" name="_captcha" value="false">
       <label class="sr-only" for="email">Email</label>
@@ -383,7 +384,7 @@ body.is-mobile #noise {
   };
 
   logo.img.decoding = 'async';
-  logo.img.src = 'TriSure_Logo_weiß (2).png';
+  logo.img.src = 'TriSure_Logo_weiá (2).png';
   logo.img.onload = () => {
     logo.ready = true;
     logo.ratio = logo.img.width / logo.img.height || 1;
@@ -595,10 +596,10 @@ body.is-mobile #noise {
     const driftX = 0;
     const driftY = 0;
     const parallaxScale = isNarrow ? 0.04 : 0.22;
-    const baseY = isNarrow ? 0.11 : 0.26;
+    const baseY = 0.26;
     const px = state.w * 0.5 + parallax.x * state.w * parallaxScale + driftX;
     const unclampedPy = state.h * baseY + parallax.y * state.h * (parallaxScale * 0.8) + driftY;
-    const py = isNarrow ? clamp(unclampedPy, state.h * 0.05, state.h * 0.15) : unclampedPy;
+    const py = isNarrow ? clamp(unclampedPy, state.h * 0.2, state.h * 0.32) : unclampedPy;
     const alpha = 0.32;
     state.logo = { x: px, y: py, r: Math.max(width, height) * 0.45 };
 
@@ -876,7 +877,7 @@ body.is-mobile #noise {
     status.textContent = messages.sending;
     status.style.color = 'rgba(232, 242, 255, 0.7)';
     try {
-      const res = await fetch('https://formsubmit.co/ajax/julian@a68.io', {
+      const res = await fetch('https://formsubmit.co/ajax/julian@trisure.de', {
         method: 'POST',
         headers: { 'Accept': 'application/json' },
         body: new FormData(form)
